--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'com.gradle.plugin-publish' version '1.1.0'
 }
 
-version = '1.0.4'
+version = '1.0.5'
 group = 'io.github.lambdatest'
 
 repositories {
@@ -32,3 +32,46 @@ gradlePlugin {
     }
   }
 }
+
+
+/////
+
+// plugins {
+//     id 'java-gradle-plugin'
+//     id 'maven-publish'
+// }
+
+// version = '1.0.9'
+// group = 'io.github.lambdatest'
+
+// repositories {
+//     mavenCentral()
+// }
+
+// dependencies {
+//     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+//     implementation 'com.google.code.gson:gson:2.8.8'
+//     implementation 'org.slf4j:slf4j-api:1.7.32'
+//     implementation 'ch.qos.logback:logback-classic:1.2.6'
+// }
+
+// gradlePlugin {
+//     plugins {
+//         lambdatestPlugin {
+//             id = 'io.github.lambdatest.gradle'
+//             implementationClass = 'io.github.lambdatest.gradle.LambdaTestPlugin'
+//         }
+//     }
+// }
+
+// publishing {
+//     publications {
+//         mavenJava(MavenPublication) {
+//             from components.java
+//         }
+//     }
+
+//     repositories {
+//         mavenLocal()
+//     }
+// }
