--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -2,9 +2,9 @@ name: Check Format
 
 on:
   push:
-    branches: [ 'main' ]
+    branches: [ main ]
   pull_request:
-    branches: [ 'main' ]
+    branches: [ main ]
 
 jobs:
   check:
@@ -17,8 +17,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
           distribution: 'oracle'
+          java-version: '17'
 
       - name: Build with Gradle
         run: ./gradlew spotlessCheck
