--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,17 +1,17 @@
-name: Run Unit-Tests
+name: "Run Unit-Tests"
 
 on:
     push:
-        branches:
-            - main
+        branches: [ "main" ]
     pull_request:
-        branches:
-            - main
+        branches: [ "main" ]
+
 
 jobs:
     unit-tests:
         runs-on: ubuntu-latest
         permissions:
+            actions: read
             contents: read
         steps:
             - name: Checkout Repo
@@ -19,8 +19,8 @@ jobs:
             - name: Set up JDK 17
               uses: actions/setup-java@v4
               with:
-                  distribution: 'oracle'
-                  java-version: '17'
+                  distribution: "oracle"
+                  java-version: "17"
             - name: Setup Gradle
               uses: gradle/actions/setup-gradle@v3
             - name: Run test suites
