--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
+    name: Run Unit-Tests
     permissions:
       actions: read
       contents: read
@@ -27,5 +28,5 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
 
       - name: Run test suites
-        run: ./gradlew test
+        run: ./gradlew test --info
 
