--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.24.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.24.1'
+    
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    testImplementation 'org.mockito:mockito-core:5.1.1'
 }
 
 gradlePlugin {
@@ -39,6 +43,10 @@ spotless {
         googleJavaFormat().aosp()
         formatAnnotations()
     }
+}
+
+test {
+    useJUnitPlatform()
 }
 
 javadoc {
