--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,9 @@ dependencies {
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
     testImplementation 'org.mockito:mockito-core:5.5.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
     testImplementation 'org.assertj:assertj-core:3.24.2'
+    
 }
 
 test {
